Filesystem scanner refactored to non-static implementation  (#21715)
* Created filesystem scanner for DM Common

* Modifed scanner to properly handle missing permissions; added test cases for filesystem scanner

* Tests remade using native temp files; Scanner now throws errors that precede first successful yield

* Changed Posix compatibility dependency

* Edited versioning and READMEs to adhere to pipelines

* Refactored scanner to non-static implementation; provided user configurable options for error handling

* Removed test dependencies from central package list

* Refactored scanner to non-static implementation; provided user configurable options for error handling

* Removed test dependencies from central package list

* Scanner will only work on one path for now

* Capitalization on FileSystemScanner

* Changed scanner to internal

--- a/sdk/storage/Azure.Storage.Common.DataMovement/tests/Azure.Storage.Common.DataMovement.Tests.csproj
+++ b/sdk/storage/Azure.Storage.Common.DataMovement/tests/Azure.Storage.Common.DataMovement.Tests.csproj
@@ -7,8 +7,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Mono.Posix" />
-    <PackageReference Include="System.IO.FileSystem.AccessControl" />
+    <PackageReference Include="Mono.Posix" VersionOverride="7.0.0-alpha8.21302.6" />
+    <PackageReference Include="System.IO.FileSystem.AccessControl" VersionOverride="5.0.0" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)..\src\Azure.Storage.Common.DataMovement.csproj" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)..\..\Azure.Storage.Common\tests\Azure.Storage.Common.Tests.csproj" />
   </ItemGroup>
