Overwrite Vision.Face with public preview client (#22106)
Replace the client content in Vision.Face with the public preview
client generated from Face/preview/v1.0-preview/Face.json that points
to face/v1.0-preview endpoints.

Co-authored-by: Yang Chen <yachen4@microsoft.com>

--- a/sdk/cognitiveservices/Vision.Face/src/Microsoft.Azure.CognitiveServices.Vision.Face.csproj
+++ b/sdk/cognitiveservices/Vision.Face/src/Microsoft.Azure.CognitiveServices.Vision.Face.csproj
@@ -14,6 +14,7 @@
     6) Aligned with latest Face API, multiple recognition model feature was added.
     ]]>
     </PackageReleaseNotes>
+    <GenerateAPIListing>true</GenerateAPIListing>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -23,5 +24,7 @@
   <PropertyGroup>
     <AzureApiTag />
     <PackageTags>$(PackageTags);$(CommonTags);$(AzureApiTag);</PackageTags>
+    <AssemblyName>Microsoft.Azure.CognitiveServices.Vision.Face</AssemblyName>
+    <RootNamespace>Microsoft.Azure.CognitiveServices.Vision.Face</RootNamespace>
   </PropertyGroup>
 </Project>
