Fix code snippets in readme

--- a/sdk/signalr/Microsoft.Azure.WebJobs.Extensions.SignalRService/tests/Microsoft.Azure.WebJobs.Extensions.SignalRService.Tests.csproj
+++ b/sdk/signalr/Microsoft.Azure.WebJobs.Extensions.SignalRService/tests/Microsoft.Azure.WebJobs.Extensions.SignalRService.Tests.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.SignalR.Management" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Moq" />
     <PackageReference Include="xunit" />
