New tests for network resources
wip

wip

wip

props

description

--- a/sdk/kusto/Microsoft.Azure.Management.Kusto/src/Microsoft.Azure.Management.Kusto.csproj
+++ b/sdk/kusto/Microsoft.Azure.Management.Kusto/src/Microsoft.Azure.Management.Kusto.csproj
@@ -11,7 +11,9 @@
     <PackageReleaseNotes>
       <![CDATA[
         The C# client provides management capabilities for Azure Data Explorer (Kusto) entities. The following capabilities are included with this release:
-        - bla bla
+        - Update and delete "Private endpoint connections"
+        - Create, Update and delete "Managed private endpoints"
+        - Expose Private link resources 
       ]]>
 </PackageReleaseNotes>
   </PropertyGroup>
