--- a/sdk/synapse/Azure.Analytics.Synapse.AccessControl/src/Azure.Analytics.Synapse.AccessControl.csproj
+++ b/sdk/synapse/Azure.Analytics.Synapse.AccessControl/src/Azure.Analytics.Synapse.AccessControl.csproj
@@ -5,7 +5,7 @@
     <Version>1.0.0-preview.6</Version>
     <PackageTags>Microsoft Azure Synapse Access Control;$(PackageCommonTags)</PackageTags>
     <TargetFrameworks>$(RequiredTargetFrameworks)</TargetFrameworks>
-
+    <DefineConstants>$(DefineConstants);EXPERIMENTAL</DefineConstants>
     <NoWarn>
       $(NoWarn);
       SA1649;
