--- a/sdk/resources/Microsoft.Azure.Management.Resource/src/Microsoft.Azure.Management.ResourceManager.csproj
+++ b/sdk/resources/Microsoft.Azure.Management.Resource/src/Microsoft.Azure.Management.ResourceManager.csproj
@@ -14,7 +14,7 @@
 		<PackageTags>Microsoft Azure resource management;resource management;resource groups;Azure Policy</PackageTags>
 		<PackageReleaseNotes>
       <![CDATA[
-          - Add new property ExtendedLocation to the model Subscriptions
+        Add new property ExtendedLocation to the model Subscriptions.
       ]]>
     </PackageReleaseNotes>
 	</PropertyGroup>
