--- a/sdk/webpubsub/Microsoft.Azure.WebPubSub.Common/src/Microsoft.Azure.WebPubSub.Common.csproj
+++ b/sdk/webpubsub/Microsoft.Azure.WebPubSub.Common/src/Microsoft.Azure.WebPubSub.Common.csproj
@@ -4,7 +4,8 @@
     <AssemblyTitle>Azure SDK Common for WebPubSub</AssemblyTitle>
     <Version>1.0.0-beta.1</Version>
     <PackageTags>Azure, WebPubSub</PackageTags>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <RequiredTargetFrameworks>netstandard2.0</RequiredTargetFrameworks>
+    <TargetFrameworks>$(RequiredTargetFrameworks)</TargetFrameworks>
     <NoWarn>$(NoWarn);419;CA1822</NoWarn>
   </PropertyGroup>
 
