--- a/sdk/signalr/Microsoft.Azure.WebJobs.Extensions.SignalRService/src/Microsoft.Azure.WebJobs.Extensions.SignalRService.csproj
+++ b/sdk/signalr/Microsoft.Azure.WebJobs.Extensions.SignalRService/src/Microsoft.Azure.WebJobs.Extensions.SignalRService.csproj
@@ -6,7 +6,7 @@
     <Version>1.7.0-beta.1</Version>
     <SignAssembly>true</SignAssembly>
     <IsExtensionClientLibrary>true</IsExtensionClientLibrary>
-    <NoWarn>CS1591;CA1031;SA1636;CA1200;CA2227;AZC0001;CA1816;CA1056;SA1402;CA1062;CA1822;CA1819;AZC0012;SA1316;SA1414;CS0006;CA1716;CA1305;CA2012;</NoWarn>
+    <NoWarn>$(NoWarn);CS1591;AZC0001</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,5 +18,13 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\zityang\source\repos\azure-sdk-for-net\eng/images/pkgicon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\zityang\source\repos\azure-sdk-for-net\eng/images/pkgicon.png" />
   </ItemGroup>
 </Project>
