--- a/sdk/sqlmanagement/Microsoft.Azure.Management.Sql/src/Microsoft.Azure.Management.Sql.csproj
+++ b/sdk/sqlmanagement/Microsoft.Azure.Management.Sql/src/Microsoft.Azure.Management.Sql.csproj
@@ -7,14 +7,13 @@
 		<PackageId>Microsoft.Azure.Management.Sql</PackageId>
 		<Description>Azure SQL Management SDK library</Description>
 		<AssemblyName>Microsoft.Azure.Management.Sql</AssemblyName>
-		<Version>2.0.0-preview</Version>
-		<PackageTags>Microsoft Azure SQL Management;SQL;SQL Management;</PackageTags>
+		<Version>2.1.0-preview</Version>
+		<PackageTags>Microsoft Azure SQL Management;SQL;SQL Management;2021-05-01-preview</PackageTags>
 		<PackageReleaseNotes>
 			<![CDATA[
 New features:
-- Update SQL DB Databases (2021-02-01-preview), Ledger Digest Upload (2021-02-01-preview), Outbound Firewall Rules APIs (2021-02-01-preview), Long Term Retention Backups (2020-11-01-preview), Update Encryption Protector (2020-11-01-preview), SQL v5 SDK release,
-Update ResourceIdentity model.
-- Add a new version SQL DB Short Term Retention Policy API (2021-02-01-preview) with a new parameter Diff Backup Frequency. 
+- ManagedInstance APIs (2021-05-01-preview) removed parameter storageAccountType and istead added currentBackupStorageRedundancy and requestedBackupStorageRedundancy
+- BackupStorageRedundany model now has 'GeoZone' option as well
       ]]>
 		</PackageReleaseNotes>
 	</PropertyGroup>
