--- a/sdk/profiles/hybrid_2020_09_01/EventHubs/Management.EventHubs/Management.EventHubs.Profiles.Hybrid-2020-09-01.csproj
+++ b/sdk/profiles/hybrid_2020_09_01/EventHubs/Management.EventHubs/Management.EventHubs.Profiles.Hybrid-2020-09-01.csproj
@@ -5,7 +5,7 @@
 
 	<PropertyGroup>
 		<PackageId>Microsoft.Azure.Management.Profiles.hybrid_2020_09_01.EventHubs</PackageId>
-		<Version>0.9.0-preview</Version>
+		<Version>1.0.0</Version>
 		<AssemblyTitle>Microsoft Azure EventHubs Management hybrid_2020_09_01</AssemblyTitle>
 		<AssemblyName>Microsoft.Azure.Management.Profiles.hybrid_2020_09_01.EventHubs</AssemblyName>
 		<PackageTags>EventHubsHybrid2020_09_01;EventHubs;</PackageTags>
