--- a/sdk/profiles/hybrid_2020_09_01/KeyVault/Management.KeyVault/Management.KeyVault.Profiles.Hybrid-2020-09-01.csproj
+++ b/sdk/profiles/hybrid_2020_09_01/KeyVault/Management.KeyVault/Management.KeyVault.Profiles.Hybrid-2020-09-01.csproj
@@ -5,7 +5,7 @@
 
 	<PropertyGroup>
 		<PackageId>Microsoft.Azure.Management.Profiles.hybrid_2020_09_01.KeyVault</PackageId>
-		<Version>0.9.0-preview</Version>
+		<Version>1.0.0</Version>
 		<AssemblyTitle>Microsoft Azure KeyVault Management hybrid_2020_09_01</AssemblyTitle>
 		<AssemblyName>Microsoft.Azure.Management.Profiles.hybrid_2020_09_01.KeyVault</AssemblyName>
 		<PackageTags>KeyVaultHybrid2020_09_01;Compute;</PackageTags>
