--- a/sdk/profiles/hybrid_2020_09_01/Monitor/Management.Monitor/Management.Monitor.Profiles.Hybrid-2020-09-01.csproj
+++ b/sdk/profiles/hybrid_2020_09_01/Monitor/Management.Monitor/Management.Monitor.Profiles.Hybrid-2020-09-01.csproj
@@ -6,7 +6,7 @@
 	<PropertyGroup>
 		<PackageId>Microsoft.Azure.Management.Profiles.hybrid_2020_09_01.Monitor</PackageId>
 		<AssemblyTitle>Microsoft Azure Monitor Management hybrid_2020_09_01 Profile</AssemblyTitle>
-		<Version>0.9.0-preview</Version>
+		<Version>1.0.0</Version>
 		<AssemblyName>Microsoft.Azure.Management.Profiles.hybrid_2020_09_01.Monitor</AssemblyName>
 		<PackageTags>MonitorHybrid2020_09_01;Monitor;</PackageTags>
 		<PackageReleaseNotes>
