replace commented Live tests

--- a/sdk/confidentialledger/Azure.Security.ConfidentialLedger/tests/Azure.Security.ConfidentialLedger.Tests.csproj
+++ b/sdk/confidentialledger/Azure.Security.ConfidentialLedger/tests/Azure.Security.ConfidentialLedger.Tests.csproj
@@ -22,4 +22,8 @@
     <Folder Include="SessionRecords\ConfidentialLedgerClientLiveTests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="SessionRecords\ConfidentialLedgerClientLiveTests\GetReceipt.json" />
+  </ItemGroup>
+
 </Project>
