--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -112,7 +112,9 @@
     <PackageReference Update="CloudNative.CloudEvents" Version="2.0.0" />
     <PackageReference Update="CloudNative.CloudEvents.SystemTextJson" Version="2.0.0" />
     <PackageReference Update="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="3.0.0" Condition="'$(TargetFramework)' == 'netcoreapp3.1'" />
+    <PackageReference Update="Microsoft.Azure.SignalR" Version="1.12.0" />
     <PackageReference Update="Microsoft.Azure.SignalR.Management" Version="1.12.0" />
+    <PackageReference Update="Microsoft.Azure.SignalR.Protocols" Version="1.12.0" />
     <PackageReference Update="Microsoft.Azure.SignalR.Serverless.Protocols" Version="1.6.0" />
     <PackageReference Update="Microsoft.Azure.WebJobs" Version="3.0.30" />
     <PackageReference Update="Microsoft.Azure.WebJobs.Sources" Version="3.0.30" />
