revert resourcemanager reference

--- a/eng/Directory.Build.Common.props
+++ b/eng/Directory.Build.Common.props
@@ -132,8 +132,7 @@
   </PropertyGroup>
 
   <ItemGroup Condition="'$(IsMgmtSubLibrary)' == 'true' and !$(MSBuildProjectName.Equals('Azure.ResourceManager.Tests'))">
-    <!-- <PackageReference Include="Azure.ResourceManager" /> -->
-    <ProjectReference Include="../../../../sdk/resourcemanager/Azure.ResourceManager/src/Azure.ResourceManager.csproj" />
+    <PackageReference Include="Azure.ResourceManager" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(IsMgmtLibrary)' == 'true'">
