--- a/sdk/monitor/Azure.Monitor.OpenTelemetry.Exporter/src/Azure.Monitor.OpenTelemetry.Exporter.csproj
+++ b/sdk/monitor/Azure.Monitor.OpenTelemetry.Exporter/src/Azure.Monitor.OpenTelemetry.Exporter.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Azure.Core" />
     <PackageReference Include="System.Text.Json" />
     <PackageReference Include="OpenTelemetry" />
+    <ProjectReference Include="C:\Users\vibankwa\source\repos\opentelemetry-dotnet\src\OpenTelemetry.Extensions.Storage\OpenTelemetry.Extensions.Storage.csproj" />
   </ItemGroup>
 
   <!-- Shared source from Azure.Core -->
