--- a/sdk/appconfiguration/Azure.ResourceManager.AppConfiguration/tests/Azure.ResourceManager.AppConfiguration.Tests.csproj
+++ b/sdk/appconfiguration/Azure.ResourceManager.AppConfiguration/tests/Azure.ResourceManager.AppConfiguration.Tests.csproj
@@ -1,8 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <PackageReference Include="Azure.ResourceManager.Network" VersionOverride="1.0.0-beta.2" />
+    <PackageReference Include="Azure.ResourceManager.Network" VersionOverride="1.0.0-beta.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\Azure.ResourceManager.AppConfiguration.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Azure.Identity" />
   </ItemGroup>
 </Project>
