--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -52,6 +52,7 @@ jobs:
       - pwsh: |
           sudo dotnet dev-certs https --clean
           sudo dotnet dev-certs https --trust
+          sudo dotnet dev-certs https --check -v
         displayName: 'Trust certificate'
         condition: contains(variables['OSVmImage'], 'mac')
       - script: >-
