Updated batch version

--- a/sdk/batch/Microsoft.Azure.Batch.Conventions.Files/src/Microsoft.Azure.Batch.Conventions.Files.csproj
+++ b/sdk/batch/Microsoft.Azure.Batch.Conventions.Files/src/Microsoft.Azure.Batch.Conventions.Files.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Text.Encodings.Web" />
-    <PackageReference Include="Microsoft.Azure.Batch" />
+    <PackageReference Include="Microsoft.Azure.Batch" Version="15.1.0" />
     <PackageReference Include="WindowsAzure.Storage" />
   </ItemGroup>
 
