--- a/sdk/batch/Microsoft.Azure.Batch.FileStaging/src/Microsoft.Azure.Batch.FileStaging.csproj
+++ b/sdk/batch/Microsoft.Azure.Batch.FileStaging/src/Microsoft.Azure.Batch.FileStaging.csproj
@@ -24,7 +24,7 @@
   <ItemGroup>
     <PackageReference Include="System.Text.Encodings.Web" />
     <PackageReference Include="WindowsAzure.Storage" />
-    <PackageReference Include="Microsoft.Azure.Batch" Version="15.1.0" />
+    <PackageReference Include="Microsoft.Azure.Batch" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
     <Reference Include="System.Web" />
