--- a/sdk/textanalytics/tests.yml
+++ b/sdk/textanalytics/tests.yml
@@ -16,6 +16,7 @@ extends:
         AZURE_TENANT_ID: $(aad-azure-sdk-test-tenant-id)
         AZURE_CLIENT_SECRET: $(aad-azure-sdk-test-client-secret)
         AZURE_CLIENT_ID: $(aad-azure-sdk-test-client-id)
+        AZURE_AUTHORITY_HOST: $(aad-azure-sdk-test-authority-host)
         TEXT_ANALYTICS_ENDPOINT: $(js-textanalytics-test-service-endpoint)
         TEXT_ANALYTICS_API_KEY: $(js-textanalytics-api-key-new)
         TEXTANALYTICS_SINGLE_CATEGORY_CLASSIFY_PROJECT_NAME: $(js-single-category-classify-project-name)
