--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -124,7 +124,7 @@
 
   <!-- Packages intended for Management libraries only -->
   <ItemGroup Condition="'$(IsMgmtSubLibrary)' == 'true'">
-    <PackageReference Update="Azure.ResourceManager" Version="1.0.0-beta.4" />
+    <PackageReference Update="Azure.ResourceManager" Version="1.0.0-alpha.20211025.2" />
   </ItemGroup>
 
   <!-- Packages intended for Extensions libraries only -->
