Add serverless protocol tests

--- a/sdk/signalr/Microsoft.Azure.WebJobs.Extensions.SignalRService/tests/Microsoft.Azure.WebJobs.Extensions.SignalRService.Tests.csproj
+++ b/sdk/signalr/Microsoft.Azure.WebJobs.Extensions.SignalRService/tests/Microsoft.Azure.WebJobs.Extensions.SignalRService.Tests.csproj
@@ -11,4 +11,8 @@
   <ItemGroup>
     <ProjectReference Include="..\src\Microsoft.Azure.WebJobs.Extensions.SignalRService.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\..\Microsoft.Azure.SignalR.Serverless.Protocols\tests\Common\*.cs" LinkBase ="Common"/>
+  </ItemGroup>
 </Project>
