--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -112,6 +112,7 @@
   <ItemGroup Condition="'$(IsClientLibrary)' == 'true' and $(MSBuildProjectName.StartsWith('Microsoft.'))">
     <PackageReference Update="CloudNative.CloudEvents" Version="2.0.0" />
     <PackageReference Update="CloudNative.CloudEvents.SystemTextJson" Version="2.0.0" />
+    <PackageReference Update="MessagePack" Version="1.9.11" />
     <PackageReference Update="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="3.0.0" Condition="'$(TargetFramework)' == 'netcoreapp3.1'" />
     <PackageReference Update="Microsoft.Azure.SignalR" Version="1.12.0" />
     <PackageReference Update="Microsoft.Azure.SignalR.Management" Version="1.12.0" />
