--- a/sdk/machinelearningservices/Azure.ResourceManager.MachineLearningServices/tests/Azure.ResourceManager.MachineLearningServices.Tests.csproj
+++ b/sdk/machinelearningservices/Azure.ResourceManager.MachineLearningServices/tests/Azure.ResourceManager.MachineLearningServices.Tests.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.ResourceManager.Resources"/>
+    <!--<PackageReference Include="Azure.ResourceManager.Resources"/>-->
+    <ProjectReference Include="..\..\..\resources\Azure.ResourceManager.Resources\src\Azure.ResourceManager.Resources.csproj" />
     <ProjectReference Include="..\src\Azure.ResourceManager.MachineLearningServices.csproj" />
     <PackageReference Include="Microsoft.Azure.AutoRest.CSharp" VersionOverride="$(MgmtAutorestVersion)" PrivateAssets="All" />
   </ItemGroup>
