Updated for RP 2021-06-01 release
This release removes legacy S1 SKU, has S360 fixes, releases new RP version 2021-06-01,
        and adds support for regional resources and system-assigned Managed Identities in IoT Central.

--- a/sdk/iotcentral/Microsoft.Azure.Management.IotCentral/src/Microsoft.Azure.Management.IotCentral.csproj
+++ b/sdk/iotcentral/Microsoft.Azure.Management.IotCentral/src/Microsoft.Azure.Management.IotCentral.csproj
@@ -8,13 +8,12 @@
     <Description>Provides management capabilities for Microsoft Azure IotCentral.</Description>
     <AssemblyTitle>Microsoft Azure IotCentral Management</AssemblyTitle>
     <AssemblyName>Microsoft.Azure.Management.IotCentral</AssemblyName>
-    <Version>3.1.0</Version>
+    <Version>3.2.0</Version>
     <PackageTags>Microsoft Azure IotCentral;IotCentral management;IotCentral;</PackageTags>
     <PackageReleaseNotes>
       <![CDATA[
-        This release made sure the resourceType, iotApps is in camel case.
-        This release also added origin and properties field to operations API.
-        This release also added industry and locations field to appTemplate API.
+        This release removes legacy S1 SKU, has S360 fixes, releases new RP version 2021-06-01,
+        and adds support for regional resources and system-assigned Managed Identities in IoT Central.
       ]]>
     </PackageReleaseNotes>
   </PropertyGroup>
