--- a/sdk/machinelearningservices/Azure.ResourceManager.MachineLearningServices/tests/Azure.ResourceManager.MachineLearningServices.Tests.csproj
+++ b/sdk/machinelearningservices/Azure.ResourceManager.MachineLearningServices/tests/Azure.ResourceManager.MachineLearningServices.Tests.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <!--<PackageReference Include="Azure.ResourceManager.Resources"/>-->
-    <ProjectReference Include="..\..\..\resources\Azure.ResourceManager.Resources\src\Azure.ResourceManager.Resources.csproj" />
+    <PackageReference Include="Azure.ResourceManager.Resources"/>
     <ProjectReference Include="..\src\Azure.ResourceManager.MachineLearningServices.csproj" />
     <PackageReference Include="Microsoft.Azure.AutoRest.CSharp" VersionOverride="$(MgmtAutorestVersion)" PrivateAssets="All" />
   </ItemGroup>
