--- a/sdk/sqlmanagement/Azure.ResourceManager.Sql/tests/Azure.ResourceManager.Sql.Tests.csproj
+++ b/sdk/sqlmanagement/Azure.ResourceManager.Sql/tests/Azure.ResourceManager.Sql.Tests.csproj
@@ -8,12 +8,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\Azure.ResourceManager.Sql.csproj" />
-    <ProjectReference Include="..\..\..\resources\Azure.ResourceManager.Resources\src\Azure.ResourceManager.Resources.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <!--<PackageReference Include="Azure.ResourceManager.Resources"/>
-    <PackageReference Include="Azure.ResourceManager.Network"/>
-    <PackageReference Include="Azure.ResourceManager.Storage"/>-->
+    <PackageReference Include="Azure.ResourceManager.Resources"/>
+    <!--<PackageReference Include="Azure.ResourceManager.Network"/>-->
     <PackageReference Include="Microsoft.Azure.AutoRest.CSharp" VersionOverride="$(MgmtAutorestVersion)" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
